--- a/src/components/CtaForm.css
+++ b/src/components/CtaForm.css
@@ -7,8 +7,8 @@
 }
 
 .cta {
-  height: 75rem;
-  width: 50%;
+  height: auto;
+  width: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   overflow: hidden;
@@ -22,6 +22,12 @@
   background-size: cover; */
 }
 
+.cta .btn-send {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+}
+
 .cta-text-box h2 {
   margin-bottom: 4.8rem;
 }
@@ -30,7 +36,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-bottom: 6.4rem;
-  column-gap: 4.8rem;
+  column-gap: 6.4rem;
   row-gap: 3.6rem;
 }
 
@@ -84,4 +90,23 @@ input[type="date"]:invalid::-webkit-datetime-edit {
 
 input[type="time"]:invalid::-webkit-datetime-edit {
   color: var(--main-color-dark);
+}
+
+@media (max-width: 58em) {
+  .cta {
+    height: auto;
+  }
+  .cta-form {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 37em) {
+  .heading-secondary {
+    font-size: 2.4rem;
+  }
+
+  .heading-tertiary {
+    font-size: 1.8rem;
+  }
 }
