--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -2,7 +2,7 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../assets/images/VistaCarService.jpg);
   background-attachment: fixed;
-  background-position: top;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -16,6 +16,10 @@
   line-height: 1.2;
 }
 
+.hero-container button {
+  margin-top: 4.8rem;
+}
+
 .heading-primary {
   font-size: 4.4rem;
   color: var(--secondary-color);
@@ -24,6 +28,7 @@
 
 .hero-text {
   font-size: 2.2rem;
+  line-height: 1.8;
   color: var(--main-color);
   margin-top: 1.2rem;
 }
@@ -32,4 +37,24 @@
   display: flex;
   gap: 2.4rem;
   margin-top: 6.4rem;
+}
+
+@media (max-width: 64em) {
+  .hero-text {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 58em) {
+  .hero-text {
+    font-size: 2rem;
+    text-align: center;
+    padding: 0 2.4rem;
+  }
+}
+
+@media (max-width: 44em) {
+  .heading-primary {
+    text-align: center;
+  }
 }
