--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -96,19 +96,26 @@
   .main-nav-list {
     background-color: var(--tertiary-color);
     position: absolute;
+
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    opacity: 0;
+
     display: flex;
     align-items: center;
     justify-content: center;
     transition: all 0.5s ease-in;
+
+    opacity: 0;
+    pointer-events: none;
+    visibility: visible;
   }
 
   .main-nav-list.active {
-    opacity: 100%;
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
   }
 
   .main-nav-list {
