--- a/src/components/Reusable-components/Accordion/Accordion.css
+++ b/src/components/Reusable-components/Accordion/Accordion.css
@@ -1,7 +1,7 @@
 .accordion {
   background-color: #fff;
   border-radius: 0.5rem;
-  padding: 1.8rem 2.4rem;
+  padding: 1.2rem 2.4rem;
   cursor: pointer;
   margin-bottom: 2.4rem;
 }
@@ -18,6 +18,7 @@
 
 .accordion-title h2 {
   font-size: 2rem;
+  line-height: 1.6;
 }
 
 .content {
@@ -41,4 +42,11 @@
   line-height: 1.8;
   margin-top: 2.4rem;
   color: var(--main-color-shade);
+}
+
+@media (max-width: 30em) {
+  .accordion h2 {
+    font-size: 1.8rem;
+    line-height: 1.6;
+  }
 }
