--- a/src/components/Reusable-components/RequestButton/RequestButton.css
+++ b/src/components/Reusable-components/RequestButton/RequestButton.css
@@ -22,10 +22,24 @@
   transform: translate(-50%, -50%);
   line-height: 1.4;
   background: #f1f1f1;
-  padding: 14px 28px;
-  border-radius: 3px;
-  max-width: 600px;
-  min-width: 300px;
+  padding: 2.4rem 4.8rem;
+  border-radius: 0.5rem;
+  max-width: 60rem;
+  min-width: 30rem;
+}
+
+.popup-content h2 {
+  font-size: 2.4rem;
+}
+
+.popup-content p {
+  margin-top: 2.4rem;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.popup-content button {
+  margin-top: 4.8rem;
 }
 
 .overlay {
