--- a/src/components/HomePageComponents/Reasons.css
+++ b/src/components/HomePageComponents/Reasons.css
@@ -41,7 +41,7 @@
 }
 
 .rc-right {
-  background-image: url("../assets/images/1c3529c1-33d2-4ad3-9dd2-da2feda3f05a.png");
+  background-image: url("../../assets/images/1c3529c1-33d2-4ad3-9dd2-da2feda3f05a.png");
   background-size: cover;
   background-position: center;
 }
