--- a/src/components/GeneralComponents/Navbar.css
+++ b/src/components/GeneralComponents/Navbar.css
@@ -109,7 +109,7 @@
 
     opacity: 0;
     pointer-events: none;
-    visibility: visible;
+    visibility: hidden;
   }
 
   .main-nav-list.active {
