--- a/src/components/HomePageComponents/CtaForm.css
+++ b/src/components/HomePageComponents/CtaForm.css
@@ -8,12 +8,14 @@
 
 .cta {
   height: auto;
-  width: 100%;
+  max-width: 100rem;
   border-radius: 0.5rem;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   overflow: hidden;
   padding: 6.4rem;
   background-color: var(--tertiary-color);
+  margin: 0 auto;
+
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../assets/images/benjamin-brunner-K3cjUOMmMhc-unsplash.jpg);
 
@@ -26,6 +28,11 @@
   position: relative;
   left: 50%;
   transform: translate(-50%);
+}
+
+.cta .btn-send:disabled {
+  background-color: var(--main-color-dark);
+  cursor: auto;
 }
 
 .cta-text-box h2 {
@@ -63,9 +70,10 @@
   margin-top: 1rem;
   color: red;
   display: none;
+  font-size: 1.2rem;
 }
 
-.cta-form input:invalid ~ span {
+.cta-form input:invalid[focused="true"] ~ span {
   display: block;
 }
 
