--- a/src/components/HomePageComponents/FAQSection.css
+++ b/src/components/HomePageComponents/FAQSection.css
@@ -1,6 +1,6 @@
 .questions-section {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../assets/images/chad-kirchoff-xe-e69j6-Ds-unsplash.jpg);
+    url(../../assets/images/chad-kirchoff-xe-e69j6-Ds-unsplash.jpg);
 
   background-position: center;
   background-repeat: no-repeat;
