--- a/src/components/HomePageComponents/HeroSection.css
+++ b/src/components/HomePageComponents/HeroSection.css
@@ -1,6 +1,6 @@
 .hero-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../assets/images/VistaCarService.jpg);
+    url(../../assets/images/VistaCarService.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,10 +16,6 @@
   line-height: 1.2;
 }
 
-.hero-container button {
-  margin-top: 4.8rem;
-}
-
 .heading-primary {
   font-size: 4.4rem;
   color: var(--secondary-color);
@@ -31,12 +27,6 @@
   line-height: 1.8;
   color: var(--main-color);
   margin-top: 1.2rem;
-}
-
-.btn-container {
-  display: flex;
-  gap: 2.4rem;
-  margin-top: 6.4rem;
 }
 
 @media (max-width: 64em) {
