--- a/src/components/GeneralComponents/Navbar.css
+++ b/src/components/GeneralComponents/Navbar.css
@@ -5,6 +5,9 @@
   padding: 0 4.8rem;
   height: 7.2rem;
   background-color: var(--tertiary-color);
+  position: sticky;
+  top: 0;
+  z-index: 9999;
 }
 
 .main-nav-list {
