--- a/src/components/HomePageComponents/CtaForm.css
+++ b/src/components/HomePageComponents/CtaForm.css
@@ -10,7 +10,7 @@
   height: auto;
   max-width: 100rem;
   border-radius: 0.5rem;
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 6.4rem;
   background-color: var(--tertiary-color);
@@ -24,15 +24,15 @@
   background-size: cover; */
 }
 
-.cta .btn-send {
+/* .cta .btn-send {
   position: relative;
   left: 50%;
   transform: translate(-50%);
-}
+} */
 
 .cta .btn-send:disabled {
   background-color: var(--main-color-dark);
-  cursor: auto;
+  cursor: not-allowed;
 }
 
 .cta-text-box h2 {
