--- a/src/components/HomePageComponents/HeroSection.css
+++ b/src/components/HomePageComponents/HeroSection.css
@@ -16,17 +16,11 @@
   line-height: 1.2;
 }
 
-.heading-primary {
-  font-size: 4.4rem;
-  color: var(--secondary-color);
-  text-transform: uppercase;
-}
-
 .hero-text {
   font-size: 2.2rem;
   line-height: 1.8;
   color: var(--main-color);
-  margin-top: 1.2rem;
+  margin-bottom: 4.8rem;
 }
 
 @media (max-width: 64em) {
