--- a/src/components/GeneralComponents/Navbar.css
+++ b/src/components/GeneralComponents/Navbar.css
@@ -68,19 +68,17 @@
   background-color: var(--secondary-color-shade);
 }
 
-.logo-box,
-.logo-box:link,
-.logo-box:visited {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
+.logo,
+.logo:link,
+.logo:visited {
   text-decoration: none;
   color: var(--secondary-color);
-  font-size: 1.8rem;
+  font-size: 3.2rem;
   transition: all 0.3s ease;
+  font-weight: 700;
 }
 
-.logo-box:hover {
+.logo:hover {
   color: var(--secondary-color-shade);
 }
 
@@ -114,6 +112,8 @@
     align-items: center;
     justify-content: center;
     transition: all 0.5s ease-in;
+    flex-direction: column;
+    gap: 4.8rem;
 
     opacity: 0;
     pointer-events: none;
@@ -124,10 +124,5 @@
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
-  }
-
-  .main-nav-list {
-    flex-direction: column;
-    gap: 4.8rem;
   }
 }
