--- a/src/components/HomePageComponents/FAQSection.css
+++ b/src/components/HomePageComponents/FAQSection.css
@@ -7,7 +7,9 @@
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  /* max-height: 99rem; */
+
+  /* height: 100%; */
+  max-height: 99rem;
 
   padding: 9.6rem 0;
   /* background-color: #fff; */
