--- a/src/components/HomePageComponents/HeroSection.css
+++ b/src/components/HomePageComponents/HeroSection.css
@@ -1,8 +1,8 @@
 .hero-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../../assets/images/VistaCarService.jpg);
-  background-attachment: fixed;
-  background-position: center;
+  /* background-attachment: fixed; */
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
