--- a/src/components/Reusable-components/ServiceCard/ServiceCard.css
+++ b/src/components/Reusable-components/ServiceCard/ServiceCard.css
@@ -6,7 +6,7 @@
 }
 
 .service-text-box {
-  padding: 0 1rem;
+  padding: 1rem 2rem;
 }
 
 .service-img {
@@ -15,16 +15,9 @@
 }
 
 .service-title {
-  margin: 1rem 0;
+  font-size: 2rem;
   cursor: pointer;
-}
-
-.service-title span {
-  transition: all 0.3s ease;
-}
-
-.service-title:hover span {
-  color: var(--secondary-color-shade);
+  text-align: center;
 }
 
 @media (max-width: 49em) {
@@ -40,7 +33,7 @@
 }
 
 @media (max-width: 37em) {
-  .services-container {
-    grid-template-columns: repeat(2, 1fr);
+  .service-title {
+    font-size: 1.8rem;
   }
 }
