--- a/src/components/ServicesComponents/ServicesList.css
+++ b/src/components/ServicesComponents/ServicesList.css
@@ -15,3 +15,15 @@
   text-align: center;
   color: var(--tertiary-color);
 }
+
+@media (max-width: 37em) {
+  .services-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 30em) {
+  .services-container {
+    grid-template-columns: 1fr;
+  }
+}
