--- a/src/Styles/general.css
+++ b/src/Styles/general.css
@@ -3,3 +3,13 @@
   margin: 0 auto;
   padding: 0 3.2rem;
 }
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.2rem var(--secondary-color);
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.4rem var(--secondary-color);
+}
